- all local changes to support RTEMS so far (I finally decided to    CVS libtecla and am too lazy to do the research needed for a    detailed changelog, sorry).

--- a/Makefile.in
+++ b/Makefile.in
@@ -136,12 +136,12 @@ TARGET_LIBS = @TARGET_LIBS@
 # should be assigned the single word: demos. If it isn't assigned
 # anything, the demo programs won't be built.
 #
-DEMOS = demos
+#DEMOS = demos
 
 #
 # List the programs that are to be made by default.
 #
-PROGRAMS = enhance
+#PROGRAMS = enhance
 
 #
 # List programs for which reentrant versions are to be built by default.
@@ -152,9 +152,11 @@ PROGRAMS_R =
 # You shouldn't need to change anything below this line.
 #-----------------------------------------------------------------------
 
-CFLAGS = $(OPT) $(WARNING_FLAGS) $(DEFINES) @CFLAGS@ @SHARED_CFLAGS@
+CFLAGS = $(OPT) $(WARNING_FLAGS) $(DEFINES) @CFLAGS@ @SHARED_CFLAGS@ -I@srcdir@/../
 
 default: $(TARGETS)
+
+all:	default
 
 normal:
 	@$(MAKE) -f $(srcdir)/Makefile.rules TARGETS="$(TARGET_LIBS)" SUFFIX="" CFLAGS="$(CFLAGS)" CC="$(CC)" OBJDIR=normal_obj LINK_SHARED='@LINK_SHARED@' SHARED_EXT='@SHARED_EXT@' SHARED_ALT='@SHARED_ALT@' LIBS='$(LIBS)' srcdir='$(srcdir)' LIBDIR='$(LIBDIR)' LN_S='@LN_S@' DEMOS="$(DEMOS)" PROGRAMS='$(PROGRAMS)' RANLIB='$(RANLIB)'
