--- a/Makefile.rules
+++ b/Makefile.rules
@@ -50,7 +50,7 @@ demos: demo$(SUFFIX) demo2$(SUFFIX)
 
 demo$(SUFFIX): $(OBJDIR)/demo.o
 	LD_RUN_PATH="$(LIBDIR):$$LD_RUN_PATH:`pwd`" $(CC) $(CFLAGS) -o $@ \
- $(OBJDIR)/demo.o -L. -ltecla$(SUFFIX) $(LIBS)
+ $(OBJDIR)/demo.o -L. -ltecla$(SUFFIX) $(LIBS) -Wl,--defsym,main=tecla_main
 
 demo2$(SUFFIX): $(OBJDIR)/demo2.o
 	LD_RUN_PATH="$(LIBDIR):$$LD_RUN_PATH:`pwd`" $(CC) $(CFLAGS) -o $@ \
