This commit was manufactured by cvs2svn to create tag 'GeSys_2_1_beta'.
Sprout from B_libtecla_orig 2002-05-31 02:27:06 UTC till ' - import of libtecla'
Cherrypick from master 2003-09-26 23:23:25 UTC till ' - use $(AR) not ar':
    Makefile.in
    Makefile.rules
    README.rtems
    configure.in
    demo.c
    direader.c
    getline.c
    getline.c.opostdiff
    homedir.c
    libtecla.h
    pathutil.c
Delete:
    configure

--- a/Makefile.rules
+++ b/Makefile.rules
@@ -26,7 +26,7 @@ PROGS = demo$(SUFFIX) demo2$(SUFFIX) enhance$(SUFFIX)
 static: libtecla$(SUFFIX).a
 
 libtecla$(SUFFIX).a: $(LIB_OBJECTS)
-	ar -ru $@ $(LIB_OBJECTS); \
+	$(AR) -ru $@ $(LIB_OBJECTS); \
 	$(RANLIB) $@; \
 	rm -f $(PROGS)
 
@@ -50,7 +50,7 @@ demos: demo$(SUFFIX) demo2$(SUFFIX)
 
 demo$(SUFFIX): $(OBJDIR)/demo.o
 	LD_RUN_PATH="$(LIBDIR):$$LD_RUN_PATH:`pwd`" $(CC) $(CFLAGS) -o $@ \
- $(OBJDIR)/demo.o -L. -ltecla$(SUFFIX) $(LIBS)
+ $(OBJDIR)/demo.o -L. -ltecla$(SUFFIX) $(LIBS) -Wl,--defsym,main=tecla_main
 
 demo2$(SUFFIX): $(OBJDIR)/demo2.o
 	LD_RUN_PATH="$(LIBDIR):$$LD_RUN_PATH:`pwd`" $(CC) $(CFLAGS) -o $@ \
