--- a/configure.in
+++ b/configure.in
@@ -9,6 +9,13 @@ dnl contains the libtecla source code.
 
 AC_INIT(getline.c)
 
+dnl The following directive tells autoconf to figure out the target
+dnl system type and assign a canonical name for this to the $target
+dnl shell variable. This is used below in the target-specific case
+dnl statement.
+
+AC_CANONICAL_SYSTEM
+
 dnl Here we set the major version number of the tecla library.
 dnl Incrementing this number implies that a change has been made to
 dnl the library's public interface, which makes it binary incompatible
@@ -80,13 +87,7 @@ dnl is set to ranlib. Otherwise it is set to :, which is the do-nothing
 dnl command of the bourne shell.
 
 AC_PROG_RANLIB
-
-dnl The following directive tells autoconf to figure out the target
-dnl system type and assign a canonical name for this to the $target
-dnl shell variable. This is used below in the target-specific case
-dnl statement.
-
-AC_CANONICAL_SYSTEM
+AC_CHECK_TOOL(AR,ar)
 
 dnl In early versions of Solaris, some libraries are in /usr/ccs/lib,
 dnl where gcc doesn't look. The tests below for the curses library
@@ -186,7 +187,11 @@ dnl available, default to only compiling the non-reentrant version of
 dnl the library.
 
 if test $tecla_cv_reentrant = no; then
+if test $host_os = rtems; then
+  TARGETS="reentrant"
+else
   TARGETS="normal"
+fi
 fi
 
 dnl Check for the select system call with the normal arguments,
@@ -317,7 +322,11 @@ dnl names. Beware that autoconf uses [] as quote characters, so if you
 dnl want to use a regexp character range like [a-z], you should write
 dnl this as [[a-z]].
 
-case $target in
+dnl T. Straumann; don't build shared libs for the cexp demo program
+dnl               so they don't have problems with the shared library
+dnl               path
+dnl case $target in
+case "ts_dont_build_shared_libs_for_cexp_demo" in
 *solaris*)
   AC_DEFINE(__EXTENSIONS__)
   SHARED_EXT=".so.${MAJOR_VER}"
