--- a/Makefile.in
+++ b/Makefile.in
@@ -15,6 +15,7 @@ srcdir = @srcdir@
 
 prefix=@prefix@
 exec_prefix=@exec_prefix@
+datarootdir=@datarootdir@
 LIBDIR=@libdir@
 INCDIR=@includedir@
 MANDIR=@mandir@
