This commit was manufactured by cvs2svn to create tag 'SSRL_APPS_20070411'.
Sprout from B_libtecla_orig 2007-02-14 20:34:02 UTC guest ' - importing libtecla-1.6.1'
Cherrypick from master 2007-04-10 21:47:00 UTC till ' - autoconf 2.60 demands datarootdir...':
    Makefile.in
    Makefile.rules
    README.rtems
    configure.in
    demo.c
    direader.c
    expand.c
    getline.c
    getline.c.opostdiff
    homedir.c
    html/ef_expand_file.html
    libtecla.h
    man/func/ef_expand_file.in
    pathutil.c
Delete:
    config.guess
    config.sub
    configure
    install-sh
    man3/cfc_file_start.3
    man3/cfc_literal_escapes.3
    man3/cfc_set_check_fn.3
    man3/cpl_add_completion.3
    man3/cpl_complete_word.3
    man3/cpl_file_completions.3
    man3/cpl_last_error.3
    man3/cpl_list_completions.3
    man3/cpl_record_error.3
    man3/del_CplFileConf.3
    man3/del_ExpandFile.3
    man3/del_GetLine.3
    man3/del_PathCache.3
    man3/del_PcaPathConf.3
    man3/del_WordCompletion.3
    man3/ef_expand_file.3
    man3/ef_last_error.3
    man3/ef_list_expansions.3
    man3/enhance.3
    man3/gl_change_terminal.3
    man3/gl_clear_history.3
    man3/gl_configure_getline.3
    man3/gl_customize_completion.3
    man3/gl_echo_mode.3
    man3/gl_get_line.3
    man3/gl_group_history.3
    man3/gl_ignore_signal.3
    man3/gl_last_signal.3
    man3/gl_limit_history.3
    man3/gl_load_history.3
    man3/gl_lookup_history.3
    man3/gl_prompt_style.3
    man3/gl_range_of_history.3
    man3/gl_resize_history.3
    man3/gl_save_history.3
    man3/gl_show_history.3
    man3/gl_size_of_history.3
    man3/gl_state_of_history.3
    man3/gl_terminal_size.3
    man3/gl_toggle_history.3
    man3/gl_trap_signal.3
    man3/gl_watch_fd.3
    man3/libtecla.3
    man3/libtecla_version.3
    man3/new_CplFileConf.3
    man3/new_ExpandFile.3
    man3/new_GetLine.3
    man3/new_PathCache.3
    man3/new_PcaPathConf.3
    man3/new_WordCompletion.3
    man3/pca_last_error.3
    man3/pca_lookup_file

--- a/Makefile.rules
+++ b/Makefile.rules
@@ -31,7 +31,7 @@ PROGS = $(DEMO_PROGS) enhance$(SUFFIX)
 static: libtecla$(SUFFIX).a
 
 libtecla$(SUFFIX).a: $(LIB_OBJECTS)
-	ar -ru $@ $(LIB_OBJECTS); \
+	$(AR) -ru $@ $(LIB_OBJECTS); \
 	$(RANLIB) $@; \
 	rm -f $(PROGS)
 
@@ -55,7 +55,7 @@ demos: $(DEMO_PROGS)
 
 demo$(SUFFIX): $(OBJDIR)/demo.o
 	LD_RUN_PATH="$(LIBDIR):$$LD_RUN_PATH:`pwd`" $(CC) $(CFLAGS) -o $@ \
- $(OBJDIR)/demo.o -L. -ltecla$(SUFFIX) $(LIBS)
+ $(OBJDIR)/demo.o -L. -ltecla$(SUFFIX) $(LIBS) -Wl,--defsym,main=tecla_main
 
 demo2$(SUFFIX): $(OBJDIR)/demo2.o
 	LD_RUN_PATH="$(LIBDIR):$$LD_RUN_PATH:`pwd`" $(CC) $(CFLAGS) -o $@ \
