--- a/configure.in
+++ b/configure.in
@@ -9,6 +9,13 @@ dnl contains the libtecla source code.
 
 AC_INIT(getline.c)
 
+dnl The following directive tells autoconf to figure out the target
+dnl system type and assign a canonical name for this to the $target
+dnl shell variable. This is used below in the target-specific case
+dnl statement.
+
+AC_CANONICAL_SYSTEM
+
 dnl Here we set the major version number of the tecla library.
 dnl Incrementing this number implies that a change has been made to
 dnl the library's public interface, which makes it binary incompatible
@@ -81,18 +88,15 @@ dnl command of the bourne shell.
 dnl Note that we do not use AC_PROG_RANLIB because (at least in
 dnl autoconf 2.53) this does not check for cross-compilation.
 
+AC_CHECK_TOOL(AR,ar)
 AC_CHECK_TOOL(RANLIB, ranlib)
 
 dnl Set LD as appropriate, especially when cross-compiling
 
 AC_CHECK_TOOL(LD, ld)
 
-dnl The following directive tells autoconf to figure out the target
-dnl system type and assign a canonical name for this to the $target
-dnl shell variable. This is used below in the target-specific case
-dnl statement.
-
-AC_CANONICAL_SYSTEM
+dnl install
+AC_PROG_INSTALL
 
 dnl In early versions of Solaris, some libraries are in /usr/ccs/lib,
 dnl where gcc doesn't look. The tests below for the curses library
@@ -142,6 +146,10 @@ dnl USE_TERMINFO or USE_TERMCAP is arranged to be defined in CFLAGS,
 dnl via the exported DEFINES shell variable, and the library in which
 dnl they were found is appended to the LIBS shell variable.
 
+dnl termcap/terminfo is not reentrant [thanks to Eric Norum for
+dnl pointing this out].
+
+if test $host_os != rtems; then
 AC_CHECK_LIB(curses, tigetstr, [
   AC_DEFINE(USE_TERMINFO)
   LIBS="$LIBS -lcurses"
@@ -153,6 +161,7 @@ AC_CHECK_LIB(curses, tigetstr, [
   LIBS="$LIBS -lcurses"
   AC_CHECK_HEADER(termcap.h, AC_DEFINE(HAVE_TERMCAP_H))
 ])])])
+fi
 
 dnl Search for the curses.h and term.h header files, first in the
 dnl standard system-include directories, and then if not found there,
@@ -163,7 +172,21 @@ dnl including curses.h causes complaints, so when checking for term.h
 dnl we tell AC_CHECK_HEADERS() to include curses.h in the test file
 dnl that it attempts to compile.
 
+dnl TSILL if test $host_os != rtems; then
+dnl TSILL AC_CHECK_HEADER(term.h, AC_DEFINE(HAVE_TERM_H), [
+dnl TSILL   AC_CHECK_HEADER(ncurses/term.h, AC_DEFINE(HAVE_NCURSES_TERM_H))
+dnl TSILL ])
+dnl TSILL fi 
+
+dnl TSILL dnl Do the same search for curses.h.
+
+dnl TSILL if test $host_os != rtems; then
+dnl TSILL AC_CHECK_HEADER(curses.h, AC_DEFINE(HAVE_CURSES_H), [
+dnl TSILL   AC_CHECK_HEADER(ncurses/curses.h, AC_DEFINE(HAVE_NCURSES_CURSES_H))
+dnl TSILL ])
+dnl TSILL fi
 AC_CHECK_HEADERS(curses.h, [AC_CHECK_HEADERS(term.h,[],[],[#include <curses.h>])], [AC_CHECK_HEADERS(ncurses/curses.h, [AC_CHECK_HEADERS(ncurses/term.h,[],[],[#include <ncurses/curses.h>])])])
+dnl TSILL 
 
 dnl The following variable lists the targets that will be created if
 dnl the user runs make without any arguments. Initially we assume
@@ -208,7 +231,11 @@ dnl available, default to only compiling the non-reentrant version of
 dnl the library.
 
 if test $tecla_cv_reentrant = no; then
+if test $host_os = rtems; then
+  TARGETS="reentrant"
+else
   TARGETS="normal"
+fi
 fi
 
 dnl If sys/select.h exists, arrange for the HAVE_SYS_SELECT_H C-macro to
@@ -422,7 +449,11 @@ dnl names. Beware that autoconf uses [] as quote characters, so if you
 dnl want to use a regexp character range like [a-z], you should write
 dnl this as [[a-z]].
 
-case $target in
+dnl T. Straumann; don't build shared libs for the cexp demo program
+dnl               so they don't have problems with the shared library
+dnl               path
+dnl case $target in
+case "ts_dont_build_shared_libs_for_cexp_demo" in
 *solaris*)
   AC_DEFINE(__EXTENSIONS__)
   SHARED_EXT=".so.${MAJOR_VER}"
@@ -561,7 +592,7 @@ OUTPUT_FILES="Makefile"
 rm -rf man/man*
 if test "$MAKE_MAN_PAGES"_ = "yes"_; then
   for area in libr func misc prog file; do
-    for page in man/$area/*.in; do
+    for page in "$srcdir"/man/$area/*.in; do
       OUTPUT_FILES="$OUTPUT_FILES `echo $page | sed 's/\.in$//'`"
     done
   done
