--- a/Makefile.in
+++ b/Makefile.in
@@ -15,10 +15,14 @@ srcdir = @srcdir@
 
 prefix=@prefix@
 exec_prefix=@exec_prefix@
+datarootdir=@datarootdir@
 LIBDIR=@libdir@
 INCDIR=@includedir@
 MANDIR=@mandir@
 BINDIR=@bindir@
+
+INSTALL=@INSTALL@
+INSTALL_DATA=@INSTALL_DATA@
 
 # Which C compiler do you want to use?
 
@@ -32,6 +36,7 @@ CC = @CC@
 # :, which is the bourne shell do-nothing command.
 
 RANLIB = @RANLIB@
+AR     = @AR@
 
 # Optional flags to pass to the linker.
 
@@ -93,7 +98,7 @@ DEFINES_R = @DEFS_R@
 # on modifying the library, leave this set to -O.
 #
 
-OPT = -O
+OPT = -g -O
 
 #
 # These are paranoid gcc warning flags to use when compiling new code.
@@ -144,12 +149,12 @@ TARGET_LIBS = @TARGET_LIBS@
 # should be assigned the single word: demos. If it isn't assigned
 # anything, the demo programs won't be built.
 #
-DEMOS = demos
+#DEMOS = demos
 
 #
 # List the programs that are to be made by default.
 #
-PROGRAMS = enhance
+#PROGRAMS = enhance
 
 #
 # List programs for which reentrant versions are to be built by default.
@@ -160,15 +165,17 @@ PROGRAMS_R =
 # You shouldn't need to change anything below this line.
 #-----------------------------------------------------------------------
 
-CFLAGS = $(OPT) $(WARNING_FLAGS) $(DEFINES) @CFLAGS@ @SHARED_CFLAGS@
+CFLAGS = $(OPT) $(WARNING_FLAGS) $(DEFINES) @CFLAGS@ @SHARED_CFLAGS@ -I@srcdir@/../
 
 default: $(TARGETS)
 
+all:	default
+
 normal:
-	@$(MAKE) -f $(srcdir)/Makefile.rules TARGETS="$(TARGET_LIBS)" SUFFIX="" CFLAGS="$(CFLAGS)" CC="$(CC)" OBJDIR=normal_obj LINK_SHARED='@LINK_SHARED@' SHARED_EXT='@SHARED_EXT@' SHARED_ALT='@SHARED_ALT@' LIBS='$(LIBS)' srcdir='$(srcdir)' LIBDIR='$(LIBDIR)' LN_S='@LN_S@' DEMOS="$(DEMOS)" PROGRAMS='$(PROGRAMS)' RANLIB='$(RANLIB)' LDFLAGS=$(LDFLAGS) CPPFLAGS=$(CPPFLAGS)
+	@$(MAKE) -f $(srcdir)/Makefile.rules TARGETS="$(TARGET_LIBS)" SUFFIX="" CFLAGS="$(CFLAGS)" CC="$(CC)" OBJDIR=normal_obj LINK_SHARED='@LINK_SHARED@' SHARED_EXT='@SHARED_EXT@' SHARED_ALT='@SHARED_ALT@' LIBS='$(LIBS)' srcdir='$(srcdir)' LIBDIR='$(LIBDIR)' LN_S='@LN_S@' DEMOS="$(DEMOS)" PROGRAMS='$(PROGRAMS)' RANLIB='$(RANLIB)' AR='$(AR)' LDFLAGS=$(LDFLAGS) CPPFLAGS=$(CPPFLAGS)
 
 reentrant:
-	@$(MAKE) -f $(srcdir)/Makefile.rules TARGETS="$(TARGET_LIBS)" SUFFIX="_r" CFLAGS="$(CFLAGS) $(DEFINES_R)" CC="$(CC)" OBJDIR=reentrant_obj LINK_SHARED='@LINK_SHARED@' SHARED_EXT='@SHARED_EXT@' SHARED_ALT='@SHARED_ALT@' LIBS='$(LIBS)' srcdir='$(srcdir)' LIBDIR='$(LIBDIR)' LN_S='@LN_S@' DEMOS="$(DEMOS)" PROGRAMS='$(PROGRAMS_R)' RANLIB='$(RANLIB)' LDFLAGS=$(LDFLAGS) CPPFLAGS=$(CPPFLAGS)
+	@$(MAKE) -f $(srcdir)/Makefile.rules TARGETS="$(TARGET_LIBS)" SUFFIX="_r" CFLAGS="$(CFLAGS) $(DEFINES_R)" CC="$(CC)" OBJDIR=reentrant_obj LINK_SHARED='@LINK_SHARED@' SHARED_EXT='@SHARED_EXT@' SHARED_ALT='@SHARED_ALT@' LIBS='$(LIBS)' srcdir='$(srcdir)' LIBDIR='$(LIBDIR)' LN_S='@LN_S@' DEMOS="$(DEMOS)" PROGRAMS='$(PROGRAMS_R)' RANLIB='$(RANLIB)' AR='$(AR)' LDFLAGS=$(LDFLAGS) CPPFLAGS=$(CPPFLAGS)
 
 demos: normal
 
@@ -217,56 +224,56 @@ install_inc: $(INCDIR)
 
 install_man: $(MANDIR) libr_man func_man prog_man misc_man file_man
 
-libr_man:
+libr_man: ${MANDIR}/@LIBR_MANDIR@
 	if test "@MAKE_MAN_PAGES@"_ = "yes"_; then \
-	  for template in man/libr/*.in; do \
+	  for template in $(srcdir)/man/libr/*.in; do \
 	    page=`basename "$$template" .in`; \
-	    $(srcdir)/install-sh -c -m 644 man/libr/$$page ${MANDIR}/@LIBR_MANDIR@/$$page.@LIBR_MANEXT@; \
+	    $(INSTALL_DATA) $(srcdir)/man/libr/$$page ${MANDIR}/@LIBR_MANDIR@/$$page.@LIBR_MANEXT@; \
 	  done ; \
 	fi
 
-func_man:
+func_man: ${MANDIR}/@FUNC_MANDIR@
 	if test "@MAKE_MAN_PAGES@"_ = "yes"_; then \
-	  for template in man/func/*.in; do \
+	  for template in $(srcdir)/man/func/*.in; do \
 	    page=`basename "$$template" .in`; \
-	    $(srcdir)/install-sh -c -m 644 man/func/$$page ${MANDIR}/@FUNC_MANDIR@/$$page.@FUNC_MANEXT@; \
+	    $(INSTALL_DATA) $(srcdir)/man/func/$$page ${MANDIR}/@FUNC_MANDIR@/$$page.@FUNC_MANEXT@; \
 	  done ; \
 	fi
 
-prog_man:
+prog_man: ${MANDIR}/@PROG_MANDIR@
 	if test "@MAKE_MAN_PAGES@"_ = "yes"_; then \
-	  for template in man/prog/*.in; do \
+	  for template in $(srcdir)/man/prog/*.in; do \
 	    page=`basename "$$template" .in`; \
-	    $(srcdir)/install-sh -c -m 644 man/prog/$$page ${MANDIR}/@PROG_MANDIR@/$$page.@PROG_MANEXT@; \
+	    $(INSTALL_DATA) $(srcdir)/man/prog/$$page ${MANDIR}/@PROG_MANDIR@/$$page.@PROG_MANEXT@; \
 	  done ; \
 	fi
 
-misc_man:
+misc_man: ${MANDIR}/@MISC_MANDIR@
 	if test "@MAKE_MAN_PAGES@"_ = "yes"_; then \
-	  for template in man/misc/*.in; do \
+	  for template in $(srcdir)/man/misc/*.in; do \
 	    page=`basename "$$template" .in`; \
-	    $(srcdir)/install-sh -c -m 644 man/misc/$$page ${MANDIR}/@MISC_MANDIR@/$$page.@MISC_MANEXT@; \
+	    $(INSTALL_DATA) $(srcdir)/man/misc/$$page ${MANDIR}/@MISC_MANDIR@/$$page.@MISC_MANEXT@; \
 	  done ; \
 	fi
 
-file_man:
+file_man: ${MANDIR}/@FILE_MANDIR@
 	if test "@MAKE_MAN_PAGES@"_ = "yes"_; then \
-	  for template in man/file/*.in; do \
+	  for template in $(srcdir)/man/file/*.in; do \
 	    page=`basename "$$template" .in`; \
-	    $(srcdir)/install-sh -c -m 644 man/file/$$page ${MANDIR}/@FILE_MANDIR@/$$page.@FILE_MANEXT@; \
+	    $(INSTALL_DATA) $(srcdir)/man/file/$$page ${MANDIR}/@FILE_MANDIR@/$$page.@FILE_MANEXT@; \
 	  done ; \
 	fi
 
 install_bin: $(BINDIR) $(PROGRAMS) $(PROGRAMS_R)
 	progs="$(PROGRAMS) $(PROGRAMS_R)"; \
 	for prog in $$progs; do \
-	  $(srcdir)/install-sh -c -m 755 -s $$prog $(BINDIR)/; \
+	  $(INSTALL) -m 755 -s $$prog $(BINDIR)/; \
 	done
 
 install: install_lib install_inc install_man install_bin
 
 # Make any missing installation directories.
 
-$(MANDIR) $(LIBDIR) $(INCDIR) $(BINDIR):
-	$(srcdir)/install-sh -d $@
+$(MANDIR) $(LIBDIR) $(INCDIR) $(BINDIR) $(MANDIR)/@LIBR_MANDIR@ $(MANDIR)/@FUNC_MANDIR@ $(MANDIR)/@PROG_MANDIR@ $(MANDIR)/@MISC_MANDIR@ $(MANDIR)/@FILE_MANDIR@:
+	$(INSTALL) -d $@
 	chmod ugo+rx $@
