- use 'install-data-local:' / 'uninstall-local:' for adding 'install-man' target.    We cannot add to (only replace) 'install:'

--- a/Makefile.am
+++ b/Makefile.am
@@ -36,7 +36,8 @@ man5_MANS = $(foreach xx,$(wildcard $(srcdir)/man/file/*.in),$(xx:%.in=%))
 man1_MANS = $(foreach xx,$(wildcard $(srcdir)/man/prog/*.in),$(xx:%.in=%))
 
 # automake seems not to install manpages in spite of the manual saying so
-install: install-man
+install-data-local: install-man
+uninstall-local: uninstall-man
 endif
 
 include_HEADERS=$(srcdir)/libtecla.h
