--- a/configure.in
+++ b/configure.in
@@ -154,6 +154,7 @@ dnl pointing this out].
 
 case $host_os in
 	*[[rR]][[tT]][[eE]][[mM]][[sS]]*)
+AC_CHECK_HEADER(sys/termios.h, AC_DEFINE(HAVE_SYS_TERMIOS_H))
 	;;
 	*)
 AC_CHECK_LIB(curses, tigetstr, [
@@ -179,29 +180,25 @@ dnl including curses.h causes complaints, so when checking for term.h
 dnl we tell AC_CHECK_HEADERS() to include curses.h in the test file
 dnl that it attempts to compile.
 
-dnl TSILL case $host_os in
-dnl TSILL	*[[rR]][[tT]][[eE]][[mM]][[sS]]*)
-dnl TSILL   ;;
-dnl TSILL   *)
-dnl TSILL AC_CHECK_HEADER(term.h, AC_DEFINE(HAVE_TERM_H), [
-dnl TSILL   AC_CHECK_HEADER(ncurses/term.h, AC_DEFINE(HAVE_NCURSES_TERM_H))
-dnl TSILL ])
-dnl TSILL ;;
-dnl TSILL esac
+case $host_os in
+*[[rR]][[tT]][[eE]][[mM]][[sS]]*)
+;;
+*)
+AC_CHECK_HEADER(term.h, AC_DEFINE(HAVE_TERM_H), [
+   AC_CHECK_HEADER(ncurses/term.h, AC_DEFINE(HAVE_NCURSES_TERM_H))
+])
+;;
+esac
 
-dnl TSILL dnl Do the same search for curses.h.
-
-dnl TSILL case $host_os in
-dnl TSILL	*[[rR]][[tT]][[eE]][[mM]][[sS]]*)
-dnl TSILL   ;;
-dnl TSILL   *)
-dnl TSILL AC_CHECK_HEADER(curses.h, AC_DEFINE(HAVE_CURSES_H), [
-dnl TSILL   AC_CHECK_HEADER(ncurses/curses.h, AC_DEFINE(HAVE_NCURSES_CURSES_H))
-dnl TSILL ])
-dnl TSILL ;;
-dnl TSILL esac
-AC_CHECK_HEADERS(curses.h, [AC_CHECK_HEADERS(term.h,[],[],[#include <curses.h>])], [AC_CHECK_HEADERS(ncurses/curses.h, [AC_CHECK_HEADERS(ncurses/term.h,[],[],[#include <ncurses/curses.h>])])])
-dnl TSILL 
+case $host_os in
+*[[rR]][[tT]][[eE]][[mM]][[sS]]*)
+  ;;
+  *)
+AC_CHECK_HEADER(curses.h, AC_DEFINE(HAVE_CURSES_H), [
+  AC_CHECK_HEADER(ncurses/curses.h, AC_DEFINE(HAVE_NCURSES_CURSES_H))
+])
+;;
+esac
 
 dnl The following variable lists the targets that will be created if
 dnl the user runs make without any arguments. Initially we assume
